--- a/compose.yaml
+++ b/compose.yaml
@@ -10,10 +10,10 @@ services:
       - 5432:5432
     volumes:
       - type: volume
-        source: db-data-project
+        source: db-data-codemastery
         target: /var/lib/postgresql/data
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
 volumes:
-  db-data-project:
+  db-data-codemastery:
